# mousecontroller

./: .gitignore  LICENSE  README.md  REFACTORING_SUMMARY.md  demo_gui.py  launch_gui.bat  mouse_recorder.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_gui.py  test.code-workspace
data/: demo_recording.json  mouse_recording.json
docs/: gui_user_guide.md  main_entry_point_guide.md  mouse_recorder_guide.md
src/mousecontroller/: demo.py  main.py  mouse_recorder.py  mouse_recorder_gui.py  mouse_replayer.py
src/mousecontroller/utils/: __init__.py  module_utils.py  path_utils.py
src/test/: __init__.py  demo.py  main.py  mouse_recorder.py  mouse_recorder_gui.py  mouse_replayer.py
tests/: test_main.py  test_mouse_recorder.py  test_mouse_recorder_unittest.py
